updated background color and added sites

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color:orange">
     <div>
         <div>
-            <img src="https://i.natgeofe.com/n/4f5aaece-3300-41a4-b2a8-ed2708a0a27c/domestic-dog_thumb_4x3.jpg"/>
+            <img style="width: 300px;height:250px" src="https://i.natgeofe.com/n/4f5aaece-3300-41a4-b2a8-ed2708a0a27c/domestic-dog_thumb_4x3.jpg"/>
         </div>
         <div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJ6cvN2mN7aOryDWFIxoMIrlbwklnmL6PVVvA2MT41vj8anovOaRupjnVEzDmPz2Ooqq0&usqp=CAU">Dog Food</a></li>
+                <li><a href="https://dogcare.net/">Dog Care</a></li>
+                <li><a href="https://www.chewy.com/b/toys-315">Dog Toys</a></li>
             </ul>
         </div>
     </div>
